<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        android:icon="@drawable/ic_settings_general"
        android:title="@string/pref_general_title">
        <net.sf.power.monitor.preference.DelayPreference
            android:defaultValue="@integer/delay_defaultValue"
            android:icon="@drawable/ic_settings_alarm"
            android:key="delay"
            android:title="@string/delay_title"
            app:useSimpleSummaryProvider="true" />
        <com.github.preference.PermitRingtonePreference
            android:attributionTags="media"
            android:defaultValue="@string/ringtone_tone_defaultValue"
            android:icon="@drawable/ic_settings_tone"
            android:key="ringtone.tone"
            android:ringtoneType="alarm"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/ringtone_tone"
            tools:targetApi="31" />
        <SwitchPreference
            android:defaultValue="@bool/vibrate_defaultValue"
            android:icon="@drawable/ic_settings_vibrate"
            android:key="vibrate"
            android:title="@string/vibrate_title" />
        <SwitchPreference
            android:defaultValue="@bool/sms_defaultValue"
            android:icon="@drawable/ic_settings_sms"
            android:key="sms.enabled"
            android:title="@string/sms_title" />
        <net.sf.power.monitor.preference.RecipientPreference
            android:defaultValue="@string/sms_recipient_defaultValue"
            android:dependency="sms.enabled"
            android:icon="@drawable/ic_settings_sms_recipient"
            android:key="sms.recipient"
            android:title="@string/sms_recipient_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_about_title">
        <Preference
            android:icon="@drawable/ic_settings_about"
            android:key="about.version"
            android:title="@string/version_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/support_url" />
        </Preference>
        <Preference
            android:enabled="false"
            android:icon="@drawable/ic_settings_bug"
            android:key="about.issue"
            android:summary="@string/issue_summary"
            android:title="@string/issue_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/issue_url" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>