<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <net.sf.power.monitor.preference.DelayPreference
        android:defaultValue="@integer/delay_defaultValue"
        android:icon="@drawable/ic_settings_alarm"
        android:key="delay"
        android:title="@string/delay_title" />
    <com.github.preference.RingtonePreference
        android:defaultValue="@string/ringtone_tone_defaultValue"
        android:icon="@drawable/ic_settings_tone"
        android:key="ringtone.tone"
        android:ringtoneType="alarm"
        android:showDefault="true"
        android:showSilent="true"
        android:title="@string/ringtone_tone" />
    <SwitchPreference
        android:defaultValue="@bool/vibrate_defaultValue"
        android:icon="@drawable/ic_settings_vibrate"
        android:key="vibrate"
        android:title="@string/vibrate_title" />
    <SwitchPreference
        android:defaultValue="@bool/sms_defaultValue"
        android:icon="@drawable/ic_settings_sms"
        android:key="sms.enabled"
        android:title="@string/sms_title" />
    <net.sf.power.monitor.preference.RecipientPreference
        android:defaultValue="@string/sms_recipient_defaultValue"
        android:dependency="sms.enabled"
        android:icon="@drawable/ic_settings_sms_recipient"
        android:key="sms.recipient"
        android:title="@string/sms_recipient_title" />
</PreferenceScreen>